Archive2/45/331f499b5c3cb8/output
main.cpp:2:13: error: character too large for enclosing character literal type
wchar_t t = 'ي';
            ^
1 error generated.
