Archive2/45/331f499b5c3cb8/main.cpp
#include <iostream>
wchar_t t = 'ي';
//ਧਿਕਾਰ
int main(){ }